Reto de la clase 32- pagina de registro

--- a/1Curso-frontendDeveloper/31-32capitulo-login_registro/registro/index.html
+++ b/1Curso-frontendDeveloper/31-32capitulo-login_registro/registro/index.html
@@ -9,15 +9,29 @@
     <title>Registro</title>
 </head>
 <body>
-    <header>
-        <img src="" alt="">
-
+    <header class="header">
+        <img class="header__img" src="./assets/logo-platzi-video-BW2.png" alt="Platzi Video">
     </header>
-    <section>
-
+    <section class="section">
+        <section class="register">
+            <section class="register__container">
+                <h2>Registrate</h2>
+                <form class="register__container--form" action="">
+                    <input class="input" type="text" placeholder="Nombre">
+                    <input class="input" type="email" placeholder="Correo">
+                    <input class="input" type="password" placeholder="Contraseña">
+                </form>
+                <button class="button">Registarme</button>
+                <a href="/">Iniciar sesion</a>
+            </section>
+            
+        </section>
+        <img class="register__img" src="https://i.pinimg.com/originals/29/d3/ae/29d3ae03293f54659c15f9aa4d87c26c.gif" alt=" arrow gif">
     </section>
-    <footer>
-
+    <footer class="footer">
+            <a href="/"> Terminos de usos </a>
+            <a href="/"> Declaracion de privacidad </a>
+            <a href="/"> Centro de ayuda</a>
     </footer>
     
 </body>
